# deep_neural_network

./: .gitignore  Cargo.toml  model.json  network.json  weights.json  weights2.json
datasets/: hdf5_converter.py  nn.py
research/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb  Deep Neural Network - Application.ipynb  dnn_app_utils_v3.py
src/: args.rs  dnn.rs  lib.rs  utils.rs
