[package]
name = "deep_neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["serde"]}
csv = "1.1.6"
polars = {version = "0.26.1", features = ["ndarray"]}
plotters = "0.3.4"
serde_json = "1.0.91"
serde = {version = "1.0.152", features = ["derive"]}
serde_with = "2.2.0"
image = "0.24.5"
clap = { version = "4.0", features = ["derive"] }